tests/jsx_intrinsics.custom/jsx_intrinsics.custom.exp
Error ----------------------------------------------------------------------------------------------------- main.js:6:10

Cannot create `div` element because number [1] is incompatible with string [2] in property `id`. [incompatible-type]

   main.js:6:10
   6| <div id={42} />; // Error: (`id` prop) number ~> string
               ^^ [1]

References:
   lib/jsx.js:4:27
   4|   div: $JSXIntrinsic<{id: string}>,
                                ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ main.js:9:2

Cannot cast `<div />.props.id` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   main.js:9:2
   9| (<div id="foo" />.props.id: number); // Error: (`id` prop) number ~> string
       ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   lib/jsx.js:4:27
   4|   div: $JSXIntrinsic<{id: string}>,
                                ^^^^^^ [1]
   main.js:9:29
   9| (<div id="foo" />.props.id: number); // Error: (`id` prop) number ~> string
                                  ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- strings.js:9:2

Cannot create `Div` element because property `id` is missing in props [1] but exists in object type [2]. [prop-missing]

   strings.js:9:2
   9| <Div />; // This is fine
       ^^^

References:
   strings.js:9:1
   9| <Div />; // This is fine
      ^^^^^^^ [1]
   lib/jsx.js:4:22
   4|   div: $JSXIntrinsic<{id: string}>,
                           ^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- strings.js:10:2

Cannot create `bad` element because property `bad` is missing in `$JSXIntrinsics` [1]. [prop-missing]

   strings.js:10:2
   10| <Bad />; // Error: 'bad' not in JSXIntrinsics
        ^^^

References:
   lib/jsx.js:3:23
                             v
    3| type $JSXIntrinsics = {
    4|   div: $JSXIntrinsic<{id: string}>,
    5|   span: $JSXIntrinsic<{id: string, class: string}>,
    6| };
       ^ [1]


Error -------------------------------------------------------------------------------------------------- strings.js:11:2

Cannot create string element because an index signature declaring the expected key / value type is missing in
`$JSXIntrinsics` [1]. [prop-missing]

   strings.js:11:2
   11| <Str />; // Error: string ~> keys of JSXIntrinsics
        ^^^

References:
   lib/jsx.js:3:23
                             v
    3| type $JSXIntrinsics = {
    4|   div: $JSXIntrinsic<{id: string}>,
    5|   span: $JSXIntrinsic<{id: string, class: string}>,
    6| };
       ^ [1]


Error ------------------------------------------------------------------------------------------------- strings.js:13:28

Cannot call `React.createElement` because property `id` is missing in props [1] but exists in object type [2].
[prop-missing]

   strings.js:13:28
   13| React.createElement('div', {}); // This is fine
                                  ^^ [1]

References:
   lib/jsx.js:4:22
    4|   div: $JSXIntrinsic<{id: string}>,
                            ^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- strings.js:14:21

Cannot create `bad` element because property `bad` is missing in `$JSXIntrinsics` [1]. [prop-missing]

   strings.js:14:21
   14| React.createElement('bad', {}); // Error: 'bad' not in JSXIntrinsics
                           ^^^^^

References:
   lib/jsx.js:3:23
                             v
    3| type $JSXIntrinsics = {
    4|   div: $JSXIntrinsic<{id: string}>,
    5|   span: $JSXIntrinsic<{id: string, class: string}>,
    6| };
       ^ [1]


Error ------------------------------------------------------------------------------------------------- strings.js:15:21

Cannot create string element because an index signature declaring the expected key / value type is missing in
`$JSXIntrinsics` [1]. [prop-missing]

   strings.js:15:21
   15| React.createElement(Str, {}); // Error: string ~> keys of JSXIntrinsics
                           ^^^

References:
   lib/jsx.js:3:23
                             v
    3| type $JSXIntrinsics = {
    4|   div: $JSXIntrinsic<{id: string}>,
    5|   span: $JSXIntrinsic<{id: string, class: string}>,
    6| };
       ^ [1]


Error ------------------------------------------------------------------------------------------------- strings.js:18:10

Cannot create `Div` element because number [1] is incompatible with string [2] in property `id`. [incompatible-type]

   strings.js:18:10
   18| <Div id={42} />; // Not an error but should be eventually
                ^^ [1]

References:
   lib/jsx.js:4:27
    4|   div: $JSXIntrinsic<{id: string}>,
                                 ^^^^^^ [2]



Found 9 errors
